Initial import of images from old site

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -1,11 +1,22 @@
+!!! XML
 %html
   %head
     %title
-      An awesome site 
-    %link{ :rel=>'stylesheet', :type=>'text/css', :href=>'/stylesheets/screen.css', :media=>'screen, projection' }
-    %link{ :rel=>'stylesheet', :type=>'text/css', :href=>'/stylesheets/print.css', :media=>'print' }
+      Thinking Concurrently
+      - if page.title
+        &nbsp;: #{page.title}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/screen.css', :media => 'screen, projection'}
+    %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/print.css', :media => 'print'}
     /[if lt IE 8]
-      %link{ :rel=>'stylesheet', :type=>'text/css', :href=>'/stylesheets/ie.css', :media=>'screen, projection' }
-  %body.bp
-    #container
-      ~ content
+      %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/ie.css', :media => 'screen, projection'}
+    %link{:rel =>'alternate', :type => 'application/atom+xml', :href => 'blog.atom'}
+  %body.bp.two-col
+    #container.showgrid
+      #header
+        Thinking Concurrently
+      #content
+        ~ content
+      #sidebar
+        Sidebar
+      #footer
+        Copyright 2010 Ben Browning.
