--- a/index.html.haml
+++ b/index.html.haml
@@ -2,4 +2,15 @@
 layout: base
 ---
 
-%h1 You're awestruct.
+- for post in page.posts
+  .post
+    %h2
+      %a{:href => post.url}
+        = post.title
+    %h3
+      = post.date.strftime('%A %B %d')
+    .content
+      ~post.content
+    .comments
+
+= page.posts.links
