--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -11,12 +11,23 @@
       %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/ie.css', :media => 'screen, projection'}
     %link{:rel =>'alternate', :type => 'application/atom+xml', :href => 'blog.atom'}
   %body.bp.two-col
-    #container.showgrid
+    #container
       #header
-        Thinking Concurrently
+        #header_title
+          %a{:href => "/"}
+            Thinking Concurrently
+        #header_sidebar
+          the blog of Ben Browning
       #content
         ~ content
       #sidebar
-        Sidebar
+        %h3 Contact
+        %ul
+          %li
+            %a{:href => "http://github.com/bbrowning"} bbrowning
+            on GitHub
+          %li
+            %a{:href => "http://twitter.com/bbrowning"} @bbrowning
+            on Twitter
       #footer
         Copyright 2010 Ben Browning.
