--- a/stylesheets/partials/_base.scss
+++ b/stylesheets/partials/_base.scss
@@ -8,3 +8,10 @@ $blueprint-grid-margin: 10px;
 // Use this to calculate the width based on the total width.
 // Or you can set !blueprint_grid_width to a fixed value and unset !blueprint_container_size -- it will be calculated for you.
 $blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin;
+
+// One third of the grid columns, rounding down. With 24 cols, this is 8.
+$sidebar-columns: floor($blueprint-grid-columns / 3);
+
+// Two thirds of the grid columns, rounding up.
+// With 24 cols, this is 16.
+$content-columns: ceil(2 * $blueprint-grid-columns / 3);
