--- a/stylesheets/partials/_two_col.scss
+++ b/stylesheets/partials/_two_col.scss
@@ -27,12 +27,8 @@ body.two-col {
   #header, #footer {
     @include column($blueprint-grid-columns); }
   #sidebar {
-    // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    $sidebar-columns: floor($blueprint-grid-columns / 3);
-    @include column($sidebar-columns, true); }
+    @include prepend(1);
+    @include column($sidebar-columns - 1, true); }
   #content {
-    // Two thirds of the grid columns, rounding up.
-    // With 24 cols, this is 16.
-    $content-columns: ceil(2 * $blueprint-grid-columns / 3);
     // true means it's the last column in the row
     @include column($content-columns); } }
