--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -4,7 +4,7 @@
     %title
       Thinking Concurrently
       - if page.title
-        &nbsp;: #{page.title}
+        \: #{page.title}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/screen.css', :media => 'screen, projection'}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/print.css', :media => 'print'}
     /[if lt IE 8]
