4 posts per page and add Projects sidebar section

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -29,5 +29,9 @@
           %li
             %a{:href => "http://twitter.com/bbrowning"} @bbrowning
             on Twitter
+        %h3 Projects
+        %ul
+          %li
+            %a{:href => "http://steamcannon.org"} SteamCannon
       #footer
         Copyright 2010 Ben Browning.
