Add google analytics

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -35,3 +35,5 @@
             %a{:href => "http://steamcannon.org"} SteamCannon
       #footer
         Copyright 2010 Ben Browning.
+
+      = google_analytics
