Add small About me blurb

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -21,6 +21,8 @@
       #content
         ~ content
       #sidebar
+        %h3 About
+        I'm an open source software engineer working at Red Hat and getting paid to do the things I love.
         %h3 Contact
         %ul
           %li
