Updated projects and copyright

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -34,8 +34,8 @@
         %h3 Projects
         %ul
           %li
-            %a{:href => "http://steamcannon.org"} SteamCannon
+            %a{:href => "http://torquebox.org"} TorqueBox
       #footer
-        Copyright 2010 Ben Browning.
+        Copyright 2010-2011 Ben Browning.
 
       = google_analytics
