--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -9,7 +9,7 @@
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/print.css', :media => 'print'}
     /[if lt IE 8]
       %link{:rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/ie.css', :media => 'screen, projection'}
-    %link{:rel =>'alternate', :type => 'application/atom+xml', :href => 'blog.atom'}
+    %link{:rel =>'alternate', :type => 'application/atom+xml', :href => '/blog.atom'}
   %body.bp.two-col
     #container
       #header
